config-root/namespaces/jx/jxboot-helmfile-resources/700-nexus-ing.yaml
---
# Source: jxboot-helmfile-resources/templates/700-nexus-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nexus
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
    host: nexus.cluster.local
  tls:
  - hosts:
    - nexus.cluster.local
    secretName: "tls-cluster-local-s"
